# cabal-lower-bounds

./: cabal-lower-bounds.cabal  lower-bounds.project
.github/actions/spelling/: excludes.txt  only.txt
.github/actions/spelling/allow/: Haskell.txt  LaTeX.txt  Programming.txt
.github/actions/spelling/patterns/: other.txt
.github/workflows/: haskell.yaml  haskell.yml
app/: tabulate-documented-versioning.py
app/cabal-lower-bounds/: Main.hs
config/: brittany.yaml  cabal.project.CI  cabal.project.hie  cabal.project.oldest  stylish-haskell.yaml
data/: distribution-versioning.csv
doc/: Changelog.md
src/Cabal/Package/: Dependencies.hs  Parse.hs
src/GHC/: CompilerVersion.hs  CoreLibraries.hs  CoreLibrary.hs  Distribution.hs  DistributionTable.hs
src/GHC/CompilerVersion/: Type.hs
src/GHC/CoreLibrary/: Type.hs
src/GHC/Distribution/: Table.hs
src/GHC/Distribution/Table/: Load.hs  Type.hs
src/GHC/DistributionTable/: Load.hs  Type.hs
