cabal-version:      2.2
category:           Tool
build-type:         Simple
name:               cabal-lower-bounds
version:            0.1

author:             Alex Washburn
maintainer:         github@recursion.ninja
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (C) 2020 Alex Washburn
homepage:           https://github.com/recursion-ninja/cabal-lower-bounds
bug-reports:        https://github.com/recursion-ninja/cabal-lower-bounds/issues

synopsis:           Collect the lower bounds of all dependencies of a cabal project

description:        Read in a cabal file and collect the lower bounds of all dependencies.
                    Output the lower bounds in a format that is easy to convert into a project file.
                    

tested-with:
  GHC==8.10.3,
  GHC==8.8.4,
  GHC==8.6.5,
  GHC==8.4.4,
  GHC==8.2.2,
  GHC==8.0.2,
  GHC==7.10.3

source-repository   head
  type:             git
  location:         git@github.com:recursion-ninja/cabal-lower-bounds.git


-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexcess-precision
    -fexpose-all-unfoldings
    -flate-specialise
    -foptimal-applicative-do
    -fspecialize-aggressively
    -fstatic-argument-transformation
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissed-specialisations          
    -Wmissing-deriving-strategies          
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind

  if impl(ghc >= 8.10)
    ghc-options:
      -Wderiving-defaults
      -Wunused-packages


executable cabal-lower-bounds

  default-language:
    Haskell2010
    
  main-is:        
    Main.hs

  hs-source-dirs:
    app/cabal-lower-bounds

  build-depends:
    base          >= 4.8.2  && < 5,
    Cabal         >= 3.0,
    cabal-lower-bounds,
    pretty        >= 1.1.1

library

  default-language:
    Haskell2010

  hs-source-dirs:
    src

  build-depends:
    base          >= 4.8.2  && < 5,
    bytestring    >= 0.10.6,
    Cabal         >= 3.0,
    containers    >= 0.5.6.1,
    deepseq       >= 1.4.1.1,
    filepath      >= 1.3.0.1,
    parsec        >= 3.1.13

  exposed-modules:
    Cabal.Package.Parse
    Cabal.Package.Dependencies